# Data-Analyst-mcp-server

./: .gitignore  Dockerfile  README.md  data.py  main.py  pyproject.toml  render.yaml  requirements.txt  server.py
data_functions/: __init__.py  aggregation.py  cleaning.py  config.py  core.py  feature_engineering.py  http_client.py  multi_table.py  selection.py  transformation.py
