[project]
name = "data-mcp"
version = "0.1.0"
description = "Data MCP Server - AI-driven data analysis service"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # MCP Server
    "mcp[cli]>=1.25.0",
    "fastmcp>=0.1.0",
    
    # FastAPI Backend
    "fastapi>=0.115.13",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",
    
    # Data Processing
    "pandas>=2.3.3",
    "numpy>=1.26.0",
    "openpyxl>=3.1.0",
    "xlrd>=2.0.0",
    "chardet>=5.0.0",
    
    
    # HTTP and Utilities
    "requests>=2.31.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    
]
